exporter/src/snapshots/exporter__test__parse_single_file-2.snap
---
source: src/lib.rs
expression: book
---
title: huckfinn_01_twain_apc_64kb
author:
  - Mark Twain
reader:
  - Annie Coleman Rothenberg
tracks:
  - title: huckfinn_01_twain_apc_64kb
    reader:
      - Annie Coleman Rothenberg
    track: 1
    disc: ~
total_tracks: 1
discs: ~
year: ~

