exporter/src/snapshots/exporter__test__parse_single_file-3.snap
---
source: src/lib.rs
expression: book
---
title: penguin_island_01_france_64kb
author:
  - Anatole France
reader:
  - Michael Sirois
tracks:
  - title: penguin_island_01_france_64kb
    reader:
      - Michael Sirois
    track: 1
    disc: ~
total_tracks: 1
discs: ~
year: ~

