exporter/src/snapshots/exporter__test__parse_single_file-4.snap
---
source: src/lib.rs
assertion_line: 50
expression: track
---
title: winnetou1_01_may_64kb
reader:
  - Gesine
track: 1
disc: ~

